@@ -1,4 +1,4 @@
-EBUILD lxde-meta-0.3.2.1-r1.ebuild 700 RMD160 bf2fb249c4f974ad1f0516c195f88d4461053b5d SHA1 72e718ac5d41a9c91d7f63217abe96f72ff0db7e SHA256 6265aab3d92d22d01dc8c9406430170fa33639d93e04422ff02667c61423cc15
-EBUILD lxde-meta-0.3.2.1.ebuild 680 RMD160 7344ff58ed37cf3f0eb972392d889d3ec1edbbdb SHA1 6f9cc30da9173267bd29f483d3119946d37f2332 SHA256 d35e962678bde74e0c9a9c7b11daaf90463c474a8d71edc8ed2e7d5ba2690daa
-MISC ChangeLog 597 RMD160 ed4ab918643669de433949713bf113690d9320c7 SHA1 81338694f024f886fa3d6e5168dcfc91038b3bee SHA256 fbc1aafdee35e8910f231d10f71c4f2262c72cc5491163e82c3453793e625f36
+EBUILD lxde-meta-0.3.2.1-r1.ebuild 702 RMD160 ed48ad2a1a6f7e35672454ed4b8c31c21d37cdd5 SHA1 d187f711b9778b438b24f904ca1718bf58c48498 SHA256 2dbb6dabf153506abeabf4bf1f5e83fc32e23fd54caf43299b1ff6c8e7a83274
+EBUILD lxde-meta-0.3.2.1.ebuild 682 RMD160 9431ef7a6449405b4801f8ba555618c711b1b76b SHA1 526be394f95fb3d7c3ba468c800bde74d500d976 SHA256 af5c6bd1f6add0176587f62f7cf35c34288e79dcc408e9a789d99a736162ca70
+MISC ChangeLog 729 RMD160 3739a88697feedd70b6a658df62cc257c0b4b60d SHA1 c3054839b3f52545e33ed1ca7b50a43dd54bfc34 SHA256 626eb869ab9e781f96cd13f0383632d814fad18c4288d2daa0e730f5b1eadfbe
 MISC metadata.xml 159 RMD160 35036c133a5c9c7edccc3cdfed5789092f884048 SHA1 bdf1b7cc6ffbdd223b6f05aa072e857dfc981c4f SHA256 09574ccad15f69d5367ecbb1a491cd636fb88582f69987d2ec217109dfe8befb
